<resources>
    <string name="app_name">DesafioFinal</string>
    <string name="epcc_logo">EPCC logo</string>
    <string name="professores">Professores</string>
    <string name="alunos">Alunos</string>
    <string name="profile_picture">Profile picture</string>
    <!-- Strings used for fragments for navigation -->

    <string name="contacts">Contacts:</string>
    <string name="name">Associacao de Ensino Cristovao Colombo</string>
    <string name="street">Avenida do Infante n.o 6</string>
    <string name="postal_code">9000–015 - Funchal</string>
    <string name="country_district">Madeira, Portugal</string>
    <string name="nif">NIF: 511 071 515</string>
    <string name="telephone">(+351) 291 201 770</string>
    <string name="email">info@epcc.pt</string>
    <string name="settings">Settings</string>
    <string name="layout_type">layout_type</string>
    <string name="hobbies">Hobbies:</string>
    <string name="modules">Modules</string>
    <string name="visit_web_page">Visit Web Page</string>
    <string name="madeira_logos">Madeira logos</string>
    <string name="eco_escolas">eco escolas</string>
    <string name="visit_website">Visit Website</string>
    <string name="schedule">Schedule:</string>
    <string name="week_days">Week days:</string>
    <string name="_9am_to_12pm_and_2pm_to_5pm">9am to 12pm and 2pm to 5pm</string>
    <string name="saturday">Saturday:</string>
    <string name="_10am_to_12pm">10am to 12pm</string>
    <string name="name_txt">name</string>
    <string name="year">year</string>
    <string name="duration">duration</string>
    <string name="current">current</string>
</resources>