<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

<TextView
	android:id="@+id/schedule_caption"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:gravity="center"
	android:text="@string/schedule"
	android:textColor="@color/white"
	android:textStyle="bold" />

<TableLayout
	android:layout_width="360dp"
	android:layout_height="wrap_content"
	android:layout_below="@+id/schedule_caption"
	android:layout_centerHorizontal="true">

<TableRow>

<TextView
	android:layout_weight="1"
	android:gravity="start"
	android:text="@string/week_days"
	android:textColor="@color/white" />

<TextView
	android:layout_weight="1"
	android:gravity="end"
	android:text="@string/_9am_to_12pm_and_2pm_to_5pm"
	android:textColor="@color/white" />
</TableRow>

<TableRow>

<TextView
	android:layout_weight="1"
	android:gravity="start"
	android:text="@string/saturday"
	android:textColor="@color/white" />

<TextView
	android:layout_weight="1"
	android:gravity="end"
	android:text="@string/_10am_to_12pm"
	android:textColor="@color/white" />
</TableRow>
</TableLayout>
</RelativeLayout>